--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.14.4",
     "rdflib": "^0.19.0",
     "solid-auth-client": "^2.2.10",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vuelidate": "^0.7.4"
   }
 }
